--- a/frontend/chat-app/src/app/screens/chat/chat.html
+++ b/frontend/chat-app/src/app/screens/chat/chat.html
@@ -1,1 +1,65 @@
-<p>chat works!</p>
+<div class="chat-container">
+  <div class="chat-header">
+    <div class="user-info">
+      <img
+        [src]="(currentUser$ | async)?.photoURL"
+        [alt]="(currentUser$ | async)?.displayName"
+        class="user-avatar"
+      />
+      <div class="user-details">
+        <h3>{{ (currentUser$ | async)?.displayName }}</h3>
+      </div>
+    </div>
+    <button class="logout-btn" (click)="signOut()">
+      <i class="fas fa-sign-out-alt"></i>
+      Log Out
+    </button>
+  </div>
+  <div class="chat-main">
+    <div class="users-list">
+      <h4>Users</h4>
+      <ul>
+        <li
+          *ngFor="let user of users"
+          [class.selected]="selectedUser?.uid === user.uid"
+          (click)="selectUser(user)"
+        >
+          <img
+            [src]="user.photoURL"
+            [alt]="user.displayName"
+            class="user-avatar"
+          />
+          {{ user.displayName }}
+        </li>
+      </ul>
+    </div>
+    <div class="chat-content">
+      <ng-container *ngIf="selectedUser; else selectPrompt">
+        <div class="messages-list">
+          <div
+            *ngFor="let msg of messages"
+            [class.self]="msg.senderId === (currentUser$ | async)?.uid"
+            class="message-item"
+          >
+            <span>{{ msg.message }}</span>
+            <small>{{ msg.timestamp | date : "shortTime" }}</small>
+          </div>
+        </div>
+        <div class="message-input">
+          <input
+            type="text"
+            [(ngModel)]="newMessage"
+            placeholder="message"
+            (keyup.enter)="sendMessage()"
+          />
+          <button (click)="sendMessage()">Send</button>
+        </div>
+      </ng-container>
+      <ng-template #selectPrompt>
+        <div style="color: #888; text-align: center; margin-top: 40px">
+          Select a user to start chatting.
+        </div>
+      </ng-template>
+    </div>
+  </div>
+</div>
