--- a/frontend/chat-app/src/styles.css
+++ b/frontend/chat-app/src/styles.css
@@ -1,1 +1,6 @@
-@import '@fortawesome/fontawesome-free/css/all.css';
+@import "@fortawesome/fontawesome-free/css/all.css";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
+
+body {
+  font-family: "Poppins";
+}
